--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "watch": "webpack --watch",
     "start": "webpack-dev-server --open",
     "server": "node server.js",
+    "httpserver": "http-server dist",
     "nodeserver": "node dev-server-node.js",
     "startdev": "webpack-dev-server --open --config ./webpack/webpack.dev.config.js",
-    "buildprod": "webpack --config ./webpack/webpack.prod.config.js"
+    "buildprod": "webpack --config ./webpack/webpack.prod.config.js",
+    "buildenv": "webpack --config ./webpack.env.config.js  --env.NODE_ENV=product --env.production --progress"
   },
   "keywords": [],
   "author": "",
@@ -34,6 +36,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.9",
     "html-webpack-plugin": "^2.30.1",
+    "http-server": "^0.11.1",
     "image-webpack-loader": "^4.1.0",
     "imports-loader": "^0.8.0",
     "style-loader": "^0.20.2",
@@ -43,6 +46,7 @@
     "webpack-hot-middleware": "^2.21.0",
     "webpack-merge": "^4.1.2",
     "webpack-visualizer-plugin": "^0.1.11",
+    "workbox-webpack-plugin": "^2.1.2",
     "xml-loader": "^1.2.1"
   }
 }
